// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/datasource/go/releases-direct getReleases processes real data 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://github.com/golang/text",
}
`;

exports[`modules/datasource/go/releases-direct getReleases support bitbucket tags 1`] = `
Object {
  "registryUrl": "https://bitbucket.org",
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "releaseTimestamp": undefined,
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "releaseTimestamp": undefined,
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://bitbucket.org/golang/text",
}
`;

exports[`modules/datasource/go/releases-direct getReleases support ghe 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://git.enterprise.com/example/module",
}
`;

exports[`modules/datasource/go/releases-direct getReleases support gitlab 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "releaseTimestamp": undefined,
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "releaseTimestamp": undefined,
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://gitlab.com/golang/text",
}
`;

exports[`modules/datasource/go/releases-direct getReleases support gitlab subgroups 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "releaseTimestamp": undefined,
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "releaseTimestamp": undefined,
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://gitlab.com/group/subgroup/repo",
}
`;

exports[`modules/datasource/go/releases-direct getReleases support self hosted gitlab private repositories 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "releaseTimestamp": undefined,
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "releaseTimestamp": undefined,
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://my.custom.domain/golang/myrepo",
}
`;
